Ajuste de front home

--- a/Prove3D/prove3dsite/src/main/resources/static/css/cards.css
+++ b/Prove3D/prove3dsite/src/main/resources/static/css/cards.css
@@ -8,7 +8,7 @@
 }
 
 .topPage{
-  background-color: rgb(63,146,202);
+  background-color: rgb(47,51,62);
   margin-bottom: 5px;
 }
 
@@ -17,9 +17,13 @@
   height: 200px
 }
 
+.colorCard{
+  background-color: rgb(121,106,238)!important;
+}
+
 body, html {
   height: 100%;
-  background-color: rgb(249,249,249)!important;
+  background-color: rgb(238,245,249)!important;
 
   /* background-image: url("https://hdqwalls.com/download/3d-abstract-sharp-eg-2560x1700.jpg"); */
   height: 100%;
