--- a/Prove3D/prove3dsite/src/main/resources/static/css/cards.css
+++ b/Prove3D/prove3dsite/src/main/resources/static/css/cards.css
@@ -8,8 +8,12 @@
 }
 
 .topPage{
-  background-color: rgb(63,146,202);
+  background-color: rgb(47,51,62);
   margin-bottom: 5px;
+}
+
+.colorCard{
+  background-color: rgb(121,106,238)!important;
 }
 
 .cardSize{
@@ -19,7 +23,7 @@
 
 body, html {
   height: 100%;
-  background-color: rgb(249,249,249)!important;
+  background-color: rgb(238,245,249)!important;
 
   /* background-image: url("https://hdqwalls.com/download/3d-abstract-sharp-eg-2560x1700.jpg"); */
   height: 100%;
