--- a/Prove3D/prove3dapp/src/main/java/com/projetopi/prove3dapp/telas/TelaEstatisticas.form
+++ b/Prove3D/prove3dapp/src/main/java/com/projetopi/prove3dapp/telas/TelaEstatisticas.form
@@ -115,7 +115,7 @@
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="102" attributes="0">
                                       <EmptySpace min="6" pref="6" max="-2" attributes="0"/>
-                                      <Component id="lblUtilizacao" min="-2" pref="115" max="-2" attributes="0"/>
+                                      <Component id="lblCpuUtilizacao" min="-2" pref="115" max="-2" attributes="0"/>
                                   </Group>
                                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                               </Group>
@@ -166,7 +166,7 @@
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="lblUtilizacao" min="-2" pref="19" max="-2" attributes="0"/>
+                      <Component id="lblCpuUtilizacao" min="-2" pref="19" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -227,7 +227,7 @@
                 <Property name="text" type="java.lang.String" value="Utiliza&#xe7;&#xe3;o"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="lblUtilizacao">
+            <Component class="javax.swing.JLabel" name="lblCpuUtilizacao">
             </Component>
           </SubComponents>
         </Container>
