--- a/Prove3D/prove3dsite/src/main/resources/static/css/style.default.css
+++ b/Prove3D/prove3dsite/src/main/resources/static/css/style.default.css
@@ -36,7 +36,7 @@ span:focus {
 }
 
 section {
-  padding: 50px 0;
+  padding: 20px 0px;
 }
 
 canvas {
@@ -47,12 +47,12 @@ canvas {
 }
 
 .container-fluid {
-  padding: 0 30px;
+  padding: 0 20px;
 }
 
 @media (max-width: 575px) {
   .container-fluid {
-    padding: 0 15px;
+    padding: 0 20px;
   }
 }
 
@@ -187,12 +187,12 @@ input {
 }
 
 .bg-red {
-  background: #ff7676 !important;
+  background: #796AED !important;
   color: #fff;
 }
 
 .bg-red:hover {
-  color: #fff;
+  background-color: #5844f7 !important;
 }
 
 .bg-blue {
@@ -214,12 +214,12 @@ input {
 }
 
 .bg-green {
-  background: #54e69d !important;
+  background: #4dafff !important;
   color: #fff;
 }
 
 .bg-green:hover {
-  color: #fff;
+  background-color: #1382dc !important;
 }
 
 .bg-orange {
@@ -888,7 +888,39 @@ nav.navbar .dropdown-menu h3 {
 }
 
 /* MAIN NAVBAR MEDIAQUERIES ----------------------------------- */
+/* Telefones em paisagem e abaixo */
+
+
+
+@media (max-width: 480px) {
+.side-Dash{
+  display: inline;
+ }
+}
+
+@media (max-width: 767px) {
+  .side-Dash{
+    display: inline;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 979px) {
+   .side-Dash{
+    display: inline;
+  }
+}
+
+@media (min-width: 1200px) {
+   .side-Dash{
+    display: none;
+  }
+}
+
+
+
+
 @media (max-width: 1199px) {
+
   nav.navbar {
     /*==== Toggle Sidebar Btn ====*/
   }
